--- a/potato-cactus.cabal
+++ b/potato-cactus.cabal
@@ -30,6 +30,6 @@ executable potato-cactus
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.14.3.0, network
+    build-depends:    base ^>=4.14.3.0, network, bytestring
     hs-source-dirs:   app
     default-language: Haskell2010
