socket dispatch based on opcode

--- a/potato-cactus.cabal
+++ b/potato-cactus.cabal
@@ -25,11 +25,13 @@ executable potato-cactus
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules: PotatoCactus.Dummy
-                   PotatoCactus.Network.SocketHandler
+    other-modules: PotatoCactus.Network.SocketHandler
+                   PotatoCactus.Login.LoginHandler
+                   PotatoCactus.Login.Models
+                   PotatoCactus.Game.Player
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.14.3.0, network, bytestring
+    build-depends:    base ^>=4.14.3.0, network, bytestring, utf8-string, binary, binary-strict
     hs-source-dirs:   app
     default-language: Haskell2010
