--- a/potato-cactus.cabal
+++ b/potato-cactus.cabal
@@ -26,6 +26,9 @@ executable potato-cactus
 
     -- Modules included in this executable, other than Main.
     other-modules: PotatoCactus.Network.SocketHandler
+                   PotatoCactus.Network.PlayerHandler
+                   PotatoCactus.Network.Packets.In.LoginPacket
+                   PotatoCactus.Network.Packets.Decoder
                    PotatoCactus.Login.LoginHandler
                    PotatoCactus.Login.Models
                    PotatoCactus.Game.Player
