--- a/potato-cactus.cabal
+++ b/potato-cactus.cabal
@@ -28,14 +28,16 @@ executable potato-cactus
     other-modules: PotatoCactus.Boot.GameThreadMain
                    PotatoCactus.Boot.GameChannel
                    PotatoCactus.Network.SocketHandler
-                   PotatoCactus.Network.PlayerHandler
                    PotatoCactus.Network.Packets.In.LoginPacket
                    PotatoCactus.Network.Packets.Reader
+                   PotatoCactus.Network.ClientHandler
+                   PotatoCactus.Network.Binary
                    PotatoCactus.Login.LoginHandler
-                   PotatoCactus.Network.ClientHandle
                    PotatoCactus.Login.Models
                    PotatoCactus.Game.Player
                    PotatoCactus.Game.World
+                   PotatoCactus.Game.Reducer
+                   PotatoCactus.Config.Constants
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
