--- a/potato-cactus.cabal
+++ b/potato-cactus.cabal
@@ -27,6 +27,8 @@ executable potato-cactus
     -- Modules included in this executable, other than Main.
     other-modules: PotatoCactus.Boot.GameThreadMain
                    PotatoCactus.Boot.GameChannel
+                   PotatoCactus.Client.ClientUpdate
+                   PotatoCactus.Client.PlayerUpdate
                    PotatoCactus.Network.SocketHandler
                    PotatoCactus.Network.InboundPacketMapper
                    PotatoCactus.Network.Packets.In.LoginPacket
