--- a/potato-cactus.cabal
+++ b/potato-cactus.cabal
@@ -49,3 +49,10 @@ executable potato-cactus
     build-depends:    base ^>=4.14.3.0, network, bytestring, utf8-string, binary, binary-strict
     hs-source-dirs:   app
     default-language: Haskell2010
+
+test-suite tests
+    type: exitcode-stdio-1.0
+    main-is: Main.hs
+    build-depends: HUnit ^>=1.6, base ^>=4.14.3.0, network, bytestring, utf8-string, binary, binary-strict
+    hs-source-dirs: tests, app
+    default-language: Haskell2010
