--- a/potato-cactus.cabal
+++ b/potato-cactus.cabal
@@ -82,14 +82,16 @@ executable potato-cactus
                    PotatoCactus.Game.Skills
                    PotatoCactus.Game.Typing
                    PotatoCactus.Game.World
+                   PotatoCactus.Game.World.Selectors
                    PotatoCactus.Game.Reducer
                    PotatoCactus.Config.Constants
                    PotatoCactus.Persistence.PlayerRepository
                    PotatoCactus.Utils.Iterable
+                   PotatoCactus.Utils.Logging
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.14.3.0, network, bytestring, utf8-string, binary, binary-strict
+    build-depends:    base ^>=4.14.3.0, network, bytestring, utf8-string, binary, binary-strict, time
     hs-source-dirs:   app
     default-language: Haskell2010
 
