--- a/potato-cactus.cabal
+++ b/potato-cactus.cabal
@@ -77,6 +77,7 @@ executable potato-cactus
                    PotatoCactus.Game.Player
                    PotatoCactus.Game.PlayerUpdate.AdvancePlayer
                    PotatoCactus.Game.PlayerUpdate.ChatMessage
+                   PotatoCactus.Game.PlayerUpdate.Equipment
                    PotatoCactus.Game.PlayerUpdate.UpdateMask
                    PotatoCactus.Game.PlayerUpdate.PlayerUpdate
                    PotatoCactus.Game.PlayerUpdate.ProcessPlayerUpdate
