--- a/potato-cactus.cabal
+++ b/potato-cactus.cabal
@@ -3,7 +3,7 @@ name:               potato-cactus
 version:            0.1.0.0
 
 -- A short (one-line) description of the package.
--- synopsis:
+synopsis: A 2005-era Runescape server engine.
 
 -- A longer description of the package.
 -- description:
@@ -12,7 +12,7 @@ version:            0.1.0.0
 -- bug-reports:
 
 -- The license under which the package is released.
--- license:
+license: GPLv3
 author:             Kento Lauzon
 maintainer:         kento.lauzon@ligature.ca
 
