--- a/potato-cactus.cabal
+++ b/potato-cactus.cabal
@@ -27,6 +27,7 @@ executable potato-cactus
     -- Modules included in this executable, other than Main.
     other-modules: PotatoCactus.Boot.GameThreadMain
                    PotatoCactus.Boot.GameChannel
+                   PotatoCactus.Boot.Initialization
                    PotatoCactus.Client.ClientUpdate
                    PotatoCactus.Client.LocalPlayerList
                    PotatoCactus.Client.PlayerInit
@@ -51,7 +52,6 @@ executable potato-cactus
                    PotatoCactus.Network.Packets.Out.UpdateRunEnergyPacket
                    PotatoCactus.Network.Packets.Out.UpdateSkillPacket
                    PotatoCactus.Network.Packets.Out.PlayerInteractionPacket
-                   PotatoCactus.Game.PlayerUpdate.Appearance
                    PotatoCactus.Network.Packets.Out.PlayerUpdate.EncodeBlock
                    PotatoCactus.Network.Packets.Out.PlayerUpdate.EncodeAppearanceBlock
                    PotatoCactus.Network.Packets.Out.PlayerUpdate.EncodeChatUpdate
@@ -63,6 +63,9 @@ executable potato-cactus
                    PotatoCactus.Network.Binary
                    PotatoCactus.Login.LoginHandler
                    PotatoCactus.Login.Models
+                   PotatoCactus.Game.PlayerUpdate.Appearance
+                   PotatoCactus.Game.Definitions.EquipmentDefinitions
+                   PotatoCactus.Game.Definitions.ItemDefinitions
                    PotatoCactus.Game.Interface.FriendsList
                    PotatoCactus.Game.Interface.GameTabs
                    PotatoCactus.Game.Interface.InterfaceButtonDispatch
@@ -99,7 +102,7 @@ executable potato-cactus
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.14.3.0, network, bytestring, utf8-string, binary, binary-strict, time
+    build-depends:    base ^>=4.14.3.0, network, bytestring, utf8-string, binary, binary-strict, time, containers
     hs-source-dirs:   app
     default-language: Haskell2010
     ghc-options:
@@ -110,6 +113,6 @@ executable potato-cactus
 test-suite tests
     type: exitcode-stdio-1.0
     main-is: Main.hs
-    build-depends: HUnit ^>=1.6, base ^>=4.14.3.0, network, bytestring, utf8-string, binary, binary-strict
+    build-depends: HUnit ^>=1.6, base ^>=4.14.3.0, network, bytestring, utf8-string, binary, binary-strict, time
     hs-source-dirs: tests, app
     default-language: Haskell2010
