--- a/potato-cactus.cabal
+++ b/potato-cactus.cabal
@@ -44,6 +44,7 @@ executable potato-cactus
                    PotatoCactus.Network.Packets.Reader
                    PotatoCactus.Network.Packets.Opcodes
                    PotatoCactus.Network.Packets.PacketLengths
+                   PotatoCactus.Network.Packets.Out.AddObjectPacket
                    PotatoCactus.Network.Packets.Out.ChatboxMessagePacket
                    PotatoCactus.Network.Packets.Out.InitializePlayerPacket
                    PotatoCactus.Network.Packets.Out.LoadMapRegionPacket
@@ -64,7 +65,7 @@ executable potato-cactus
                    PotatoCactus.Network.Binary
                    PotatoCactus.Login.LoginHandler
                    PotatoCactus.Login.Models
-                   PotatoCactus.Game.PlayerUpdate.Appearance
+                   PotatoCactus.Game.Entity.Object.GameObject
                    PotatoCactus.Game.Definitions.EquipmentDefinitions
                    PotatoCactus.Game.Definitions.ItemDefinitions
                    PotatoCactus.Game.Interface.FriendsList
@@ -86,6 +87,7 @@ executable potato-cactus
                    PotatoCactus.Game.Movement.WalkingStep
                    PotatoCactus.Game.Player
                    PotatoCactus.Game.PlayerUpdate.AdvancePlayer
+                   PotatoCactus.Game.PlayerUpdate.Appearance
                    PotatoCactus.Game.PlayerUpdate.ChatMessage
                    PotatoCactus.Game.PlayerUpdate.Equipment
                    PotatoCactus.Game.PlayerUpdate.UpdateMask
